# rag-bootcamp-projects

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
0-DataIngestParsing/: 1-dataingestion.ipynb
0-DataIngestParsing/data/text_files/: intro_to_machine_learning.txt  intro_to_python.txt
0-Embedding-Semantic-Similarities/: embedding_similarities.ipynb  mini_semantic_search_engine.ipynb
0_Embedding-Semantic-Similarities/: embedding_similarities.ipynb
1-DataIngestParsing/: 2-dataparsingpdf.ipynb  4-csv-excel-parsing.ipynb  6-database-parsing.ipynb
1-DataIngestParsing/data/databases/: company.db
1-DataIngestParsing/data/json_files/: company_data.json
1_DataIngestParsing/: 1-dataingestion.ipynb  2-data-parsing-pdf.ipynb  3-data-parsing-doc.ipynb  5-json-parsing.ipynb  6-database-parsing.ipynb
1_DataIngestParsing/data/structured_files/: inventory.xlsx
2_Vector_Embeddings_And_DBs/: embedding.ipynb  openai_embedding.ipynb  similarity_semantic_search.ipynb
3_Vector_Store_and_DBs/: chromadb_rag_pipeline.ipynb  lcel_core.ipynb
3_Vector_Store_and_DBs/chromadb/: chromadb.ipynb
3_Vector_Store_and_DBs/chromadb_native/: terms_and_service.txt
3_Vector_Store_and_DBs/langchain_chroma_db/: chroma.sqlite3
